# AI-universe

./: Dockerfile  README.md  bank_api.py  environment.py  inference.py  models.py  openenv.yaml  pyproject.toml  requirements.txt  server.py  tasks.py
server/: app.py
